# Wave-Transformer

./: .gitignore  COMPARATIVE_ANALYSIS_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  INTROSPECTION_IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  WAVE_TRANSFORMER_ANALYSIS_SUITE.md  pyproject.toml  pytest.ini  requirements-test.txt  run_tests.py
.claude/: settings.local.json
.claude/agents/: feature-architect.md  pytorch-doc-writer.md  pytorch-sota-implementer.md  pytorch-test-architect.md
analysis_output/: example_results.json
configs/: analysis_config_example.yaml
docs/: audio_components_documentation.md  core_components_documentation.md  language_modelling_documentation.md
examples/: analysis_usage_example.py  comparative_analysis_demo.py  introspection_demo.py
examples/analysis/: comprehensive_analysis_demo.py  visualization_demo.py
examples/language_modelling/: analysis.py  dataset_preparation_examples.py  hierachial_complete.py  inference.py  prepare_big.py  sota_transformer_components.py  train_pytorch.py  train_pytorch_big.py  train_with_wandb.py  wave_transformer_experiment_2025-10-02T20-11-49.303804.json  wave_transformer_experiment_2025-10-02T20-14-10.433665.json  wave_transformer_experiment_2025-10-02T20-17-08.987249.json  wave_transformer_experiment_2025-10-02T20-19-20.519696.json  wave_transformer_experiment_2025-10-02T20-39-51.149394.json
examples/sst_tts/: experiment.py  experiment2.py  try_out.py
examples/visualization/: wave_transformer_viz.py  wave_visualizer.py
src/grand_unity_mechanism_network/: fast_attention.py  (+3 more)
tests/: README.md
(+114 files in other folders)
